# restricted-number-cpp

./: CMakeLists.txt  LICENSE  README.md  restricted-number.h
tests/: restricted-numbers-tests.cpp
